[package]
name = "timeops-time"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
time = { version = "0.3.36", features = ["formatting", "macros", "parsing", "serde", "serde-well-known", "serde-human-readable", "local-offset"] }
